--- a/document290323.tex
+++ b/document290323.tex
@@ -571,9 +571,7 @@ brazil%
 % ---
 % Dedicatória
 % ---
-
-\chapter*{Dedicatória}\addcontentsline{toc}{chapter}{Dedicatória}
-
+\chapter*{Dedicatória}
 
 \hspace{.45\textwidth}
       \begin{minipage}{.5\textwidth}
@@ -1178,7 +1176,7 @@ Como é uma ferramenta open source e colaborativa, existe um projeto hospedado n
 
 \begin{figure}[htp]
 \centering
-\caption{Exemplo de uso da Hydra}
+\caption{Exemplo de uso da Hydra. \\Fonte: Elaborada pelos autores}
 \includegraphics[width=450px]{image1.jpeg}
 \end{figure}
 \ifdefined\FloatBarrier \FloatBarrier \fi
